force-app/main/default/objects/Load_U__c/Load_U__c.object-meta.xml
<CustomObject>
    <description>General list of Massachusetts Zip Codes and their corresponding Load Zones and Utiliy providers.</description>
    <label>ZIP Code</label>
    <nameField>
        <label>ZIP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZIP Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>