force-app/main/default/objects/Load_U__c/fields/Load_Zone__c.field-meta.xml
<CustomField>
    <fullName>Load_Zone__c</fullName>
    <label>XXXXX Load Zone &amp; Utility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>