force-app/main/default/objects/Load_U__c/fields/LZ__c.field-meta.xml
<CustomField>
    <fullName>LZ__c</fullName>
    <label>Load Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>