force-app/main/default/objects/Load_U__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <label>XXXX Utility</label>
    <length>120</length>
    <type>Text</type>
</CustomField>