force-app/main/default/objects/Load_U__c/fields/Utility_Junction_Count__c.field-meta.xml
<CustomField>
    <fullName>Utility_Junction_Count__c</fullName>
    <label>Utility_Junction_Count</label>
    <summaryForeignKey>ZipCode_Utility_Junction__c.Load_Zone_Utility__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>