force-app/main/default/objects/Load_U__c/fields/Utility_Relationship_1__c.field-meta.xml
<CustomField>
    <fullName>Utility_Relationship_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to utility object. This field is used to map to the lead utility lookup field. If in split load zone, Utility_Relationship_2 must also be populated</inlineHelpText>
    <label>Utility Relationship 1</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipName>Load_Zones_Utilities1_del</relationshipName>
    <type>Lookup</type>
</CustomField>