force-app/main/default/objects/Load_U__c/fields/Utility_Relationship_2__c.field-meta.xml
<CustomField>
    <fullName>Utility_Relationship_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to utility object. If in split load zone, this field must be populated. Customer will have ability to choose between this field and Utility_Relationship_1 in the CSAP</inlineHelpText>
    <label>Utility Relationship 2</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>Load Zones &amp; Utilities (Utility Relationship 2)</relationshipLabel>
    <relationshipName>Load_Zones_Utilities2_del</relationshipName>
    <type>Lookup</type>
</CustomField>