force-app/main/default/objects/Load_U__c/recordTypes/Load_Zone_Utility.recordType-meta.xml
<RecordType>
    <fullName>Load_Zone_Utility</fullName>
    <active>true</active>
    <label>Load Zone &amp; Utility</label>
</RecordType>