force-app/main/default/objects/Load_U__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LZ__c</columns>
    <columns>Load_Zone__c</columns>
    <columns>Utility__c</columns>
    <columns>Utility_Junction_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>