force-app/main/default/objects/Load_U__c/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>NAME</columns>
    <columns>LZ__c</columns>
    <columns>Load_Zone__c</columns>
    <columns>Town__c</columns>
    <columns>Utility__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>