force-app/main/default/objects/Load_U__c/listViews/Town_Names.listView-meta.xml
<ListView>
    <fullName>Town_Names</fullName>
    <columns>NAME</columns>
    <columns>Town__c</columns>
    <filterScope>Everything</filterScope>
    <label>Town Names</label>
</ListView>